# gg-loop-platform

./: .env  .env.automation  .env.example  .env.homelab  .env.template  .gitignore  .railway-deploy-trigger.txt  .railway-deploy.txt  .railway-force-rebuild-2.txt  .railway-rebuild-trigger  .railway-trigger.txt  .railway-vars.txt  .railwayignore  .replit  100_PERCENT_CHECKLIST.md  24_HOUR_MODE.md  7_DAY_EXECUTION_PLAN.md  7_DAY_PLAYBOOK.md  7_DAY_TRIAL_PLAN.md  ACTION_ITEMS.md  ACTIVATE_NOW.md  ACTIVATE_REVENUE.bat  ACTIVATE_REVENUE_NOW.bat  ACTIVATION_CHECKLIST.md  ACTUAL_STATUS.md  ADMIN_CEO_COMPLETE_GUIDE.md  AFFILIATE_AUTOMATION_STRATEGY.md  AG_COMPLETE_TASK_LIST.md  AG_GIT_STATE_RESOLUTION_REPORT.md  AG_MASTER_INSTRUCTIONS.md  AI_AUTOMATION_AGENCY_PLAYBOOK.md  AMAZON_ASSOCIATES_AUTOMATION.md  API_DOCS.md  ARCADE_README.txt  AUTHENTICITY_AUDIT.md  AUTHENTICITY_GUARDRAILS.md  AUTHENTIC_MARKETING.md  AUTOMATED_FIX.md  AUTOMATE_EVERYTHING.md  AUTOMATE_MANUAL_WORKFLOWS.md  (+486 more)
.agent/: AI_CONTEXT.md  SESSION_CHECKPOINT.md
.metrics/: growth.json  publish-log.json
CHATGPT REPORTS/: 2025-12-11__14-28-15__paypal_backend_stabilization.md  2025-12-11__14-33-06__desktop_app_phase_a_complete.md  2025-12-11__14-36-00__desktop_app_phase_b_complete.md  2025-12-11__14-40-00__desktop_app_phase_c_complete.md  2025-12-11__14-45-00__desktop_app_phase_d_complete.md  2025-12-18__04-28-15__startup_ignition_executed.md
ChatGPT_Context_Pack/: GG_LOOP_MASTER_ROADMAP.md  INVESTOR_PARTNER_SUMMARY.md  PLATFORM_HONESTY_REWRITE.md  SPEC_BRAND_PILOT_ENGINE.md  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
(+954 files in other folders)
