[package]
name = "gg-loop-desktop"
version = "0.1.0"
description = "GG LOOP Command Center"
authors = ["GG LOOP LLC"]
edition = "2021"
license = "Proprietary"
repository = ""

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "shell-open", "http-all" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
